# vision-robotics-suite

./: .editorconfig  .env.example  .gitignore  DOCKER_ORCHESTRATION.md  DOCKER_STRATEGY.md  Dockerfile  GIT_STATUS_RESOLUTION.md  Makefile  README.md  commit_all.py  commit_now.py  complete_final.sh  demo_advanced_features.py  demo_final.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  execute_commit.py  execute_final.py  execute_universal_commit.py  final_cleanup.py  final_commit.sh  final_stage_commit.py  final_universal_commit.py  fix_git_status.sh  git_commit_clean.py  organize_files.py  pyproject.toml  run.sh  run_commit.sh  run_complete_final.py  run_execute_commit.sh  run_final_git.py  run_universal.py  simple_commit.py  simple_final.py  simple_git.py  stage_and_commit.sh  temp_organize.sh  universal_commit.py  (+2 more)
.copilot/: instructions.md
.devcontainer/: devcontainer.json  post-create.sh
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  commit_message.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-cd.yml  test.yml
config/: grafana-datasources.yml  nginx.conf  prometheus.yml  redis.conf
docker/: dev-backend.Dockerfile  dev-frontend.Dockerfile  dev-tools.Dockerfile
docs/: project_plan.md
docs/project-status/: COMPLETION_SUMMARY.md  ORGANIZATION_SUMMARY.md  PROJECT_SUMMARY.md  STAGING_STATUS.md
gui/: Dockerfile  app.js  config.json  index.html  styles.css
scripts/: build.sh  commit-changes.sh  demo.py  demo_new.py  dev-setup.sh  init-mongo.js  init-mysql.sql  init-postgres.sh  setup.sh  validate-environment.sh
src/: __init__.py
src/api/: __init__.py  main.py
src/plc_integration/: __init__.py
src/quality_systems/: __init__.py
src/robot_programming/: __init__.py  multi_robot_collision_avoidance.py
src/robot_programming/fanuc/: force_feedback_integration.py
src/robot_programming/universal_robots/: collaborative_safety_zones.py
src/scada_hmi/: __init__.py
src/vision_systems/: __init__.py  adaptive_lighting_control.py  automotive_paint_inspection.py  base.py  battery_pack_quality_control.py  body_in_white_inspection.py  camera_calibration.py  cognex_integration.py  engine_timing_chain_verification.py  halcon_algorithms.py  photoneo_3d_registration.py  three_d_vision.py
tests/: test_vision_systems.py
tools/demo-scripts/: simple_demo.py
tools/git/: README.md
tools/git-scripts/: commit_strategy.py  execute_universal_commit.py  final_cleanup.py  final_universal_commit.py  quick_commit.py  run_final_git.py  run_universal.py  simple_execute.py  universal_commit.py
tools/shell-scripts/: commit_clean_files.sh  final_git_commit.sh  fix_git_status.sh  make_executable.sh  run_final_commit.sh  stage_clean_files.sh  test_setup.sh  universal_final.sh
